apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: mealie
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mealie
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: mealie
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            httpGet:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: longhorn-mealie-data
