apps/mealie/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`mealie.x.pmcd.io`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    certResolver: pmcdio
